; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sched.c_wake_up_new_task.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sched.c_wake_up_new_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 (%struct.rq*, %struct.task_struct*)* }
%struct.rq = type { i32 }

@WF_FORK = common dso_local global i32 0, align 4
@SD_BALANCE_FORK = common dso_local global i32 0, align 4
@TASK_RUNNING = common dso_local global i32 0, align 4
@TASK_WAKING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wake_up_new_task(%struct.task_struct* %0, i64 %1) #0 {
  %3 = alloca %struct.task_struct*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.rq*, align 8
  %7 = alloca i32, align 4
  store %struct.task_struct* %0, %struct.task_struct** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = call i32 (...) @get_cpu()
  store i32 %8, i32* %7, align 4
  %9 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %10 = call %struct.rq* @task_rq_lock(%struct.task_struct* %9, i64* %5)
  store %struct.rq* %10, %struct.rq** %6, align 8
  %11 = load %struct.rq*, %struct.rq** %6, align 8
  %12 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %13 = call i32 @activate_task(%struct.rq* %11, %struct.task_struct* %12, i32 0)
  %14 = load %struct.rq*, %struct.rq** %6, align 8
  %15 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %16 = call i32 @trace_sched_wakeup_new(%struct.rq* %14, %struct.task_struct* %15, i32 1)
  %17 = load %struct.rq*, %struct.rq** %6, align 8
  %18 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %19 = load i32, i32* @WF_FORK, align 4
  %20 = call i32 @check_preempt_curr(%struct.rq* %17, %struct.task_struct* %18, i32 %19)
  %21 = load %struct.rq*, %struct.rq** %6, align 8
  %22 = call i32 @task_rq_unlock(%struct.rq* %21, i64* %5)
  %23 = call i32 (...) @put_cpu()
  ret void
}

declare dso_local i32 @get_cpu(...) #1

declare dso_local %struct.rq* @task_rq_lock(%struct.task_struct*, i64*) #1

declare dso_local i32 @activate_task(%struct.rq*, %struct.task_struct*, i32) #1

declare dso_local i32 @trace_sched_wakeup_new(%struct.rq*, %struct.task_struct*, i32) #1

declare dso_local i32 @check_preempt_curr(%struct.rq*, %struct.task_struct*, i32) #1

declare dso_local i32 @task_rq_unlock(%struct.rq*, i64*) #1

declare dso_local i32 @put_cpu(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
